# RawTCP_Lib

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md  build.sh  main.c
include/: RawTCP.h  packet.h  packetForger.h  packetInterpreter.h  packetStream.h  segment.h  socketManager.h  streamBuilder.h
lib/: packetForger.h  socketManager.h
src/: packet.c  packetForger.c  packetInterpreter.c  segment.c  socketManager.c  streamBuilder.c
